syntax = "proto3";

package user;

service UserService {
    rpc CreateUser(CreateUserRequest) returns (UserResponse);
}

message CreateUserRequest {
    string username = 1;
    string email = 2;
    string password = 3;
}

message UserResponse {
    int32 id = 1;
    string username = 2;
    string email = 3;
    string created_at = 4;
    string updated_at = 5;
}